# ckb-contract-tests

./: Cargo.toml
.github/workflows/: ci.yml  lint-and-format.yml
demo/: Cargo.toml  Makefile  README.md
demo/contracts/ckb-script-ipc-demo/: Cargo.toml  Makefile
demo/contracts/ckb-script-ipc-demo/src/: def.rs
demo/contracts/ckb-script-ipc-test/: Cargo.toml  Makefile
demo/contracts/ckb-script-ipc-test/src/: boundary_client.rs  boundary_server.rs  chain_error_propagation_client.rs  client.rs  complex_chain_call_client.rs  def.rs  large_data_client.rs  large_data_client_2.rs  large_data_server.rs  linked_client.rs  linked_server.rs  server.rs
demo/contracts/exec-contract/: Cargo.toml  Makefile  README.md
demo/contracts/exec-contract/src/: exec_arg_length.rs
demo/contracts/first-contract/: Cargo.toml
demo/contracts/io/: Cargo.toml  Makefile
demo/contracts/io/src/: buffered.rs  copy.rs  cursor.rs  impls.rs  io_all.rs  stdio.rs  util.rs
demo/contracts/test_invalid_request/: Cargo.toml  Makefile
demo/contracts/test_invalid_request/src/: client.rs
demo/contracts/test_large_data_handling/: Cargo.toml  Makefile
demo/contracts/test_large_data_handling/src/: client.rs  server.rs
demo/contracts/test_loop_request/: Cargo.toml  Makefile
demo/contracts/test_loop_request/src/: client.rs  server.rs
demo/contracts/test_serialize/: Cargo.toml  Makefile
demo/contracts/test_serialize/src/: client.rs  def.rs  server.rs
demo/contracts/test_serialize_complex/: Cargo.toml  Makefile
demo/contracts/test_serialize_complex/src/: client.rs  def.rs  server.rs
demo/contracts/test_single_loop_request/: Cargo.toml  Makefile
demo/contracts/test_single_loop_request/src/: client.rs  def.rs
demo/tests/src/: tests.rs
src/: main.rs
src/cell_message/: cell.rs
src/cells/: bytes_cell.rs  commitment_lock.rs  demo.rs  funding_lock.rs  funding_lock_err.rs  macros.rs  mod.rs  mutisig_all.rs  xudt_data.rs
src/tests/: ckb_script_ipc_boundary.rs  ckb_script_ipc_demo.rs  ckb_script_ipc_larger.rs  ckb_script_linked_call.rs  commitment_lock.rs  contract_util.rs  easy_to_discover_type.rs  exec.rs  funding_lock.rs  input_type_proxy_lock.rs  io.rs  lock_proxy_lock.rs  mod.rs  output_type_proxy_lock.rs  single_use_lock.rs  test_multisig.rs  type_burn_lock.rs  xudt.rs
src/utilities/: mod.rs
testcase/: ipc_test_cases.md
