[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/first-contract",
  "contracts/ckb-script-ipc-demo",
  "contracts/ckb-script-ipc-test",
  "contracts/exec-contract",
  "tests",
  "contracts/test_invalid_request",
  "contracts/test_loop_request",
  "contracts/test_single_loop_request",
  "contracts/test_large_data_handling",
  "contracts/test_serialize",
  "contracts/test_serialize_complex",
  "contracts/io"
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
