[package]
name = "test_loop_request"
version = "1.0.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.17.0", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic", "log"]}
ckb-script-ipc-common = { git = "https://github.com/XuJiandong/ckb-script-ipc", rev = "10ef359", features = ["enable-logging"] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
ckb-script-ipc = { git = "https://github.com/XuJiandong/ckb-script-ipc", rev = "10ef359" }
log = "0.4.25"

[[bin]]
name = "test_loop_request-client"
path = "src/client.rs"

[[bin]]
name = "test_loop_request-serve"
path = "src/server.rs"