[package]
name = "test_serialize_complex"
version = "1.0.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.17.0", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic", "log"]}
ckb-script-ipc-common = { version = "1.0.3", features = ["enable-logging"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc", "alloc"] }
serde_with = { version = "3.6.1", default-features = false, features = ["alloc", "macros"] }
ckb-script-ipc = { version = "1.0.3" }
log = "0.4.25"

[[bin]]
name = "test_serialize-complex_client"
path = "src/client.rs"

[[bin]]
name = "test_serialize-complex_serve"
path = "src/server.rs"